[package]
name = "dustinblackman-hello-world"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dustinblackman/rust-hello-world"
description = "An empty Rust binary crate used in integration tests."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "hello-world"
path = "src/main.rs"

[[bin]]
name = "hello-world-first"
path = "src/first.rs"

[[bin]]
name = "hello-world-second"
path = "src/second.rs"
